--- a/templates/page.html
+++ b/templates/page.html
@@ -17,7 +17,7 @@
     <body>
         <div class="container-fluid mt-5" style="height: 700px;">
             <div class="row align-items-center justify-content-center h-100">
-                <div class="col-8 h-100">
+                <div class="col-8 h-100 content-container">
                     <h1 class="font-open-sans mb-2">Enter a new book</h1>
                     <hr>
 
@@ -29,6 +29,26 @@
                         <div class="form-field-wrapper">
                             {{ book_form.author }}
                             <label class="form-label font-free-sans">{{ book_form.author.label }}</label>
+                        </div>
+                        <div class="d-flex">
+                            <div class="form-field-wrapper d-flex flex-grow-1 me-2">
+                                {{ book_form.published_by }}
+                                <label class="form-label font-free-sans">{{ book_form.published_by.label }}</label>
+                            </div>
+                            <div class="form-field-wrapper d-flex flex-grow-1 ms-2">
+                                {{ book_form.published_on }}
+                                <label class="form-label font-free-sans">{{ book_form.published_on.label }}</label>
+                            </div>
+                        </div>
+                        <div class="d-flex">
+                            <div class="form-field-wrapper d-flex flex-grow-1 me-2">
+                                {{ book_form.genres }}
+                                <label class="form-label font-free-sans">{{ book_form.genres.label }}</label>
+                            </div>
+                            <div class="form-field-wrapper d-flex flex-grow-1 ms-2">
+                                {{ book_form.isbn }}
+                                <label class="form-label font-free-sans">{{ book_form.isbn.label }}</label>
+                            </div>
                         </div>
                     </form>
                 </div>
