--- a/static/fonts.css
+++ b/static/fonts.css
@@ -8,6 +8,8 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rancho&display=swap');
 
 .fw-900 { font-weight: 900; }
 .fw-800 { font-weight: 800; }
@@ -38,3 +40,5 @@
 .font-pt-sans { font-family: 'PT Sans', sans-serif; }
 .font-noto-sans { font-family: 'Noto Sans', sans-serif; }
 .font-roboto { font-family: 'Roboto', sans-serif; }
+.font-valeria-round { font-family: 'Valeria Round', sans-serif; }
+.font-rancho { font-family: 'Rancho', cursive; }
