--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,7 @@
     border: 1px solid darkgray;
     padding: 2em !important;
     box-shadow: 0 0 7px 1px gray;
+    max-width: 900px !important;
 }
 
 .form-field-wrapper
@@ -12,7 +13,7 @@
     margin: 2em 0;
 }
 
-.form-control
+.form-field
 {
     border-color: rgba(0,0,0,0) rgba(0,0,0,0) rgb(62, 68, 70) rgba(0,0,0,0) !important;
     border-radius: 0 !important;
@@ -36,9 +37,48 @@
     -webkit-transition: 200ms ease all;
 }
 
-.form-control:focus ~ .form-label,
-.form-control:valid ~ .form-label {
-  top: -20px;
-  font-size: 14px;
-  color: #4285f4;
+.form-control:focus ~ .form-label, .form-control:valid ~ .form-label, input[type='date'] ~ .form-label
+{
+    top: -20px;
+    font-size: 14px;
+    color: #4285f4;
+}
+
+
+.chosen-container-multi .chosen-choices
+{
+    background-image: none !important;
+    border-radius: 5px;
+    padding: 5px !important;
+    border: 1px solid lightgray;
+}
+:focus
+{
+    box-shadow: none !important;
+}
+
+.chosen-results .active-result
+{
+    font-family: 'Open Sans', sans-serif;
+}
+
+.dropdown-menu-center 
+{
+    right: auto;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+}
+
+.entry
+{
+    border-radius: 3px;
+    border: 1px solid lightgray;
+}
+
+.total-entries
+{
+    padding-top: 0.6rem;
+    font-size: 1.5rem;
 }
