--- a/templates/book.html
+++ b/templates/book.html
@@ -1,38 +1,68 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h1 class="font-open-sans mb-2">Enter a new book</h1>
+    <h1 class="font-nunito mb-2">Enter a new book</h1>
     <hr>
 
-    <form action="{% url 'create_book' %}" method="post" class="mt-5">
+    {% if success %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {{ success }}
+            <button class="btn-close" data-dismiss="alert"></button>
+        </div>
+    {% elif error %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            {{ error }}
+            <button type="button" class="close" data-dismiss="alert">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {% endif %}
+
+    <form action="{% url 'create_book' %}" method="post" class="mt-5" autocomplete="off">
+        {% csrf_token %}
+
         <div class="d-flex">
             <div class="form-field-wrapper d-flex flex-grow-1 me-2">
-                {{ book_form.title }}
-                <label class="form-label font-free-sans">{{ book_form.title.label }}</label>
+                <input type="text" class="form-control form-field" name="title" required="">
+                <label class="form-label font-free-sans">Title</label>
             </div>
             <div class="form-field-wrapper d-flex flex-grow-1 ms-2">
-                {{ book_form.author }}
-                <label class="form-label font-free-sans">{{ book_form.author.label }}</label>
+                <input type="text" class="form-control form-field" name="author" required="">
+                <label class="form-label font-free-sans">Author</label>
             </div>
         </div>
         
         <div class="d-flex">
             <div class="form-field-wrapper d-flex flex-grow-1 me-2">
-                {{ book_form.published_by }}
-                <label class="form-label font-free-sans">{{ book_form.published_by.label }}</label>
+                <input type="text" class="form-control form-field" name="published_by" required="">
+                <label class="form-label font-free-sans">Published by<label>
             </div>
             <div class="form-field-wrapper d-flex flex-grow-1 ms-2">
-                {{ book_form.published_on }}
-                <label class="form-label font-free-sans">{{ book_form.published_on.label }}</label>
+                <input type="date" class="form-control form-field" name="published_on" required="">
+                <label class="form-label font-free-sans">Published on<label>
             </div>
         </div>
+
+    
         <div class="form-field-wrapper">
-            {{ book_form.isbn }}
-            <label class="form-label font-free-sans">{{ book_form.isbn.label }}</label>
+            <input type="text" class="form-control form-field" name="isbn" required="">
+            <label class="form-label font-free-sans">ISBN</label>
         </div>
-        <div class="form-field-wrapper">
-            {{ book_form.genres }}
-            <label class="form-label font-free-sans">{{ book_form.genres.label }}</label>
+
+        {% comment %} <div class="form-field-wrapper">
+            <select name="genres" required multiple class="form-control form-control-chosen" data-placeholder="Start typing...">
+                {% for genre in genres %}
+                    <option value="{{ genre.slug }}">{{ genre.name }}</option>
+                {% endfor %}
+            </select>
+        </div> {% endcomment %}
+
+        <div class="d-flex flex-column justify-content-center align-items-center">
+            <button type="submit" class="btn btn-success font-open-sans px-5 mt-4">Create!</button>
+            <br>
+            <p>Not what you're looking for? <a href="{% url 'all_books' %}">View all existing book records</a></p>
         </div>
+
+
     </form>
 {% endblock %}
